refine poms, bump version to 1.3.1-SNAPSHOT